# catgpt

./: README.md  generate.py  get_weights.sh  pyproject.toml  train.py  train_reference.py
catgpt/: attention.py  dataset.py  gpt.py  layer.py  reference.py  settings.py  util.py
catgpt/layer/: __init__.py  attention.py  masked_fill_constant.py  softmax.py  statistics.py
catgpt/model/: picogpt.py
catgpt/reference/: __init__.py  function.py
catgpt/reference/model/: picogpt.py
tests/: test_attention.py  test_gpt.py  test_layer.py  test_ops.py  test_reference.py  test_reference_model.py
