[project]
name = "catgpt"
version = "0.1.0"
authors = [
  { name="Paul Wilson", email="paul@statusfailed.com" }
]
description = "GPT with Catgrad"
readme = "README.md"
requires-python = ">= 3.8"
classifiers = [
  "Programming Language :: Python :: 3",
]
dependencies = [
  "numpy~=1.23.3",
  "open-hypergraphs~=0.1.2",
  "catgrad~=0.1.0",
  "torch~=2.2.1",
]
[project.optional-dependencies]
dev = [
  "hypothesis",
  "pytest",
  "scipy~=1.10.0",
]

[project.urls]
"Homepage" = "https://github.com/statusfailed/catgpt/"
"Github" = "https://github.com/statusfailed/catgpt/"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
packages = ["catgpt"]

[tool.pytest.ini_options]
testpaths = [
  "tests"
]
